--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"deploy": "node ./gh-pages.js",
+		"deploy": "gh-pages -d build",
 		"gh-pages": "npm run build && npx gh-pages -d build"
 	},
 	"devDependencies": {
