--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"gh-pages": "npm run build && npx gh-pages -d build"
+		"deploy": "touch build/.nojekyll && gh-pages -d build -t true",
+		"gh-pages": "npm run build && npm run deploy"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
