--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"deploy": "gh-pages -d build",
-		"gh-pages": "npm run build && npx gh-pages -d build"
+		"deploy": "touch build/.nojekyll && gh-pages -d build -t true",
+		"gh-pages": "npm run build && npm run deploy"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
